--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Consola', monospace;
 }
+
 #map {
     position: absolute;
     top: 0;
@@ -13,7 +15,6 @@ body {
 	  bottom: 10px;
     right: 50px;
     padding: 10px;
-    font-family: 'Open Sans', sans-serif;
 }
 
 .map-overlay {
@@ -22,7 +23,6 @@ body {
     background: rgba(255, 255, 255, 0.8);
     border-radius: 3px;
     padding: 10px;
-    font-family: 'Oswald', sans-serif;
     overflow: auto;
     border-radius: 3px;
     z-index: 1;
@@ -39,7 +39,8 @@ body {
 }
 
 .mapboxgl-popup-content {
-    font: 400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+    font-family: 'Consola', monospace;
+    font-size: 16px;
     padding: 0;
 		width: 300px;
     max-height: 250px;
