--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,19 @@ body {
     bottom: 0;
     width: 100%;
 }
+
 #menu {
     position: absolute;
 	  bottom: 10px;
     right: 50px;
     padding: 10px;
+}
+
+#welcome {
+    background-color: #fff;
+    top: 24px;
+    max-width: 500px;
+    text-align: center;
 }
 
 .map-overlay {
@@ -28,12 +36,6 @@ body {
     z-index: 1;
 }
 
-#welcome {
-    background-color: #fff;
-    top: 24px;
-    width: 370px;
-}
-
 .mapboxgl-popup-close-button {
 		display: none;
 }
@@ -42,13 +44,9 @@ body {
     font-family: 'Consola', monospace;
     font-size: 16px;
     padding: 0;
-		width: 300px;
-    max-height: 250px;
+		width: 320px;
+    max-height: 400px;
     overflow: auto;
-}
-
-.mapboxgl-popup-content-wrapper {
-    padding: 1%;
 }
 
 .mapboxgl-popup-content h3 {
@@ -65,12 +63,12 @@ body {
 .mapboxgl-popup-content h4 {
     margin: 0;
     display: block;
-    padding: 5px;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .mapboxgl-popup-content div {
-    padding: 10px;
+    padding-left: 8px;
+    padding-top: 8px;
 }
 
 .mapboxgl-popup-anchor-top > .mapboxgl-popup-content {
